--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <section id="squares">
+        <div class="square-box">
+            <div class="first-box"> </div>
+            <div class="second-box"> </div>
+            <div class="third-box"> </div>
+            <div class="fourth-box"> </div>
+            <div class="fifth-box"> </div>
+            <div class="sixth-box"> </div>
+        </div>
+    </section>
+ 
 </body>
 </html>
