--- a/index.html
+++ b/index.html
@@ -8,16 +8,25 @@
     <title>Document</title>
 </head>
 <body>
-    <section id="squares">
+    <div class="flex__squares">
         <div class="square-box">
-            <div class="first-box"> </div>
+            <div class="first-box"> lets se if this works </div>
             <div class="second-box"> </div>
             <div class="third-box"> </div>
             <div class="fourth-box"> </div>
             <div class="fifth-box"> </div>
             <div class="sixth-box"> </div>
         </div>
-    </section>
+    </div>
+    <div class="flex__circles">
+        <div class="square-box">
+            <div class="first-box"> </div>
+            <div class="second-box"> </div>
+            <div class="third-box"> </div>
+            <div class="fourth-box"> </div>
+            <div class="fifth-box"> </div>
+        </div>
+    </div>
  
 </body>
 </html>
