have added one square in each box

--- a/index.html
+++ b/index.html
@@ -9,24 +9,24 @@
 </head>
 <body>
     <div class="flex__squares">
-        <div class="square-box">
-            <div class="first-box"> lets se if this works </div>
-            <div class="second-box"> </div>
-            <div class="third-box"> </div>
-            <div class="fourth-box"> </div>
-            <div class="fifth-box"> </div>
-            <div class="sixth-box"> </div>
-        </div>
-    </div>
-    <div class="flex__circles">
-        <div class="square-box">
+        <div class="red-box">
             <div class="first-box"> </div>
             <div class="second-box"> </div>
             <div class="third-box"> </div>
             <div class="fourth-box"> </div>
             <div class="fifth-box"> </div>
-        </div>
+            <div class="sixth-box"> </div>
     </div>
+</div>
+    <div class="flex__circles">
+        <div class="yellow-box">
+            <div class="first-box-dots"> </div>
+            <div class="second-box-dots"> </div>
+            <div class="third-box-dots"> </div>
+            <div class="fourth-box-dots"> </div>
+            <div class="fifth-box-dots"> </div>
+    </div>
+
  
 </body>
 </html>
