Have added all the classes to the first container and started aligning them correctly

--- a/index.html
+++ b/index.html
@@ -8,17 +8,41 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="flex__squares">
+    <div class="container_squares">
         <div class="red-box">
-            <div class="first-box"> </div>
-            <div class="second-box"> </div>
-            <div class="third-box"> </div>
-            <div class="fourth-box"> </div>
-            <div class="fifth-box"> </div>
-            <div class="sixth-box"> </div>
+            <div class="first-box">
+                <div class="fb-one"></div>
+                <div class="fb-two"></div>
+                <div class="fb-three"></div> 
+            </div>    
+            <div class="second-box">
+                <div class="sb-one"></div>
+                <div class="sb-two"></div>
+                <div class="sb-three"></div> 
+            </div>
+            <div class="third-box"> 
+                <div class="tb-one"></div>
+                <div class="tb-two"></div>
+                <div class="tb-three"></div> 
+            </div>
+            <div class="fourth-box">
+                <div class="fthb-one"></div>
+                <div class="fthb-two"></div>
+                <div class="fthb-three"></div> 
+            </div>
+            <div class="fifth-box">
+                <div class="fifthb-one"></div>
+                <div class="fifthb-two"></div>
+                <div class="fifthb-three"></div> 
+            </div>
+            <div class="sixth-box"> 
+                <div class="sixb-one"></div>
+                <div class="sixb-two"></div>
+                <div class="sixb-three"></div> 
+            </div>
     </div>
 </div>
-    <div class="flex__circles">
+    <div class="container_circles">
         <div class="yellow-box">
             <div class="first-box-dots"> </div>
             <div class="second-box-dots"> </div>
