added all the css for the first container and added comments

--- a/index.html
+++ b/index.html
@@ -31,9 +31,15 @@
                 <div class="fthb-three"></div> 
             </div>
             <div class="fifth-box">
-                <div class="fifthb-one"></div>
-                <div class="fifthb-two"></div>
-                <div class="fifthb-three"></div> 
+                <div class="fifthb-one">
+                    <p class="paragraph">First box</p>
+                </div>
+                <div class="fifthb-two">
+                    <p class="paragraph">Second box</p>
+                </div>
+                <div class="fifthb-three">
+                    <p class="paragraph">Third box</p>
+                </div> 
             </div>
             <div class="sixth-box"> 
                 <div class="sixb-one"></div>
