added dot classes and styled them, have also aligned some of them

--- a/index.html
+++ b/index.html
@@ -11,50 +11,83 @@
     <div class="container_squares">
         <div class="red-box">
             <div class="first-box">
-                <div class="fb-one"></div>
-                <div class="fb-two"></div>
-                <div class="fb-three"></div> 
+                <div class="fb"></div>
+                <div class="fb"></div>
+                <div class="fb"></div> 
             </div>    
             <div class="second-box">
-                <div class="sb-one"></div>
-                <div class="sb-two"></div>
-                <div class="sb-three"></div> 
+                <div class="sb"></div>
+                <div class="sb"></div>
+                <div class="sb"></div> 
             </div>
             <div class="third-box"> 
-                <div class="tb-one"></div>
-                <div class="tb-two"></div>
-                <div class="tb-three"></div> 
+                <div class="tb"></div>
+                <div class="tb"></div>
+                <div class="tb"></div> 
             </div>
             <div class="fourth-box">
-                <div class="fthb-one"></div>
-                <div class="fthb-two"></div>
-                <div class="fthb-three"></div> 
+                <div class="fthb"></div>
+                <div class="fthb"></div>
+                <div class="fthb-third"></div> 
             </div>
             <div class="fifth-box">
-                <div class="fifthb-one">
+                <div class="fifthb">
                     <p class="paragraph">First box</p>
                 </div>
-                <div class="fifthb-two">
+                <div class="fifthb-sec">
                     <p class="paragraph">Second box</p>
                 </div>
-                <div class="fifthb-three">
+                <div class="fifthb">
                     <p class="paragraph">Third box</p>
                 </div> 
             </div>
             <div class="sixth-box"> 
-                <div class="sixb-one"></div>
-                <div class="sixb-two"></div>
-                <div class="sixb-three"></div> 
+                <div class="sixb"></div>
+                <div class="sixb-sec"></div>
+                <div class="sixb"></div> 
             </div>
     </div>
 </div>
     <div class="container_circles">
         <div class="yellow-box">
-            <div class="first-box-dots"> </div>
-            <div class="second-box-dots"> </div>
-            <div class="third-box-dots"> </div>
-            <div class="fourth-box-dots"> </div>
-            <div class="fifth-box-dots"> </div>
+            <div class="first-box-dots"> 
+                <div class="dot"></div>
+                <div class="dot"></div>
+                <div class="dot"></div>
+                <div class="dot"></div>
+                <div class="dot"></div>
+            </div>
+            <div class="second-box-dots"> 
+                <div class="dot"></div>
+                <div class="dot"></div>
+                <div class="dot"></div>
+                <div class="dot"></div>
+                <div class="dot"></div>
+            </div>
+            <div class="third-box-dots">
+                <div class="dot"></div>
+                <div class="dot"></div>
+                <div class="dot"></div>
+                <div class="dot"></div>
+                <div class="dot"></div>
+                <div class="dot"></div>
+            </div>
+            <div class="fourth-box-dots"> 
+                <div class="dot"></div>
+                <div class="dot"></div>
+                <div class="dot"></div>
+                <div class="dot"></div>
+                <div class="dot"></div>
+                <div class="dot"></div>
+            </div>
+            <div class="fifth-box-dots"> 
+                <div class="dot"></div>
+                <div class="dot"></div>
+                <div class="dot"></div>
+                <div class="dot"></div>
+                <div class="dot"></div>
+                <div class="dot"></div>
+            </div>
     </div>
 
  
