--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
                 <div class="dot"></div>
                 <div class="dot"></div>
             </div>
+        </div>
     </div>
 
  
